[project]
name = "pyutils_x"
version = "0.1.0"
description = "A simple personal Python utility package"
authors = [{ name = "Omar Esquivel", email = "omararch4848@outlook.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
